2.1.1/_sources/gallery/pyplots/pyplot_two_subplots.rst.txt


.. _sphx_glr_gallery_pyplots_pyplot_two_subplots.py:


===================
Pyplot Two Subplots
===================





.. image:: /gallery/pyplots/images/sphx_glr_pyplot_two_subplots_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    def f(t):
        return np.exp(-t) * np.cos(2*np.pi*t)

    t1 = np.arange(0.0, 5.0, 0.1)
    t2 = np.arange(0.0, 5.0, 0.02)

    plt.figure(1)
    plt.subplot(211)
    plt.plot(t1, f(t1), 'bo', t2, f(t2), 'k')

    plt.subplot(212)
    plt.plot(t2, np.cos(2*np.pi*t2), 'r--')
    plt.show()

**Total running time of the script:** ( 0 minutes  0.033 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: pyplot_two_subplots.py <pyplot_two_subplots.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: pyplot_two_subplots.ipynb <pyplot_two_subplots.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
